--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -38,21 +38,21 @@
                 </div>
             </a>
             <div id="hethong" style="display:none;">
-                <a href="hethongsp">
-                    <div class="tab"><span style="margin-left:20px;">Hệ thống sản phẩm</span></div>
-                </a>
-                <a href="kiemtrasp">
-                    <div class="tab"><span style="margin-left:20px;">Kiểm tra sản phẩm</span></div>
-                </a>
-                <a href="hethongsp">
-                    <div class="tab"><span style="margin-left:20px;">Thống kê đơn hàng</span></div>
-                </a>
-                <a href="kiemtrasp">
-                    <div class="tab"><span style="margin-left:20px;">Thống kê doanh số</span></div>
-                </a>
-                <a href="kiemtrasp">
-                    <div class="tab"><span style="margin-left:20px;">Thống kê top10</span></div>
-                </a>
+              <a href="hethongsp-1">
+                  <div class="tab"><span style="margin-left:20px;">Hệ thống sản phẩm</span></div>
+              </a>
+              <a href="kiemtrasp">
+                  <div class="tab"><span style="margin-left:20px;">Kiểm tra sản phẩm</span></div>
+              </a>
+              <a href="thongkedonhang">
+                  <div class="tab"><span style="margin-left:20px;">Thống kê đơn hàng</span></div>
+              </a>
+              <a href="thongkedoanhso">
+                  <div class="tab"><span style="margin-left:20px;">Thống kê doanh số</span></div>
+              </a>
+              <a href="thongketop10">
+                  <div class="tab"><span style="margin-left:20px;">Thống kê top10</span></div>
+              </a>
             </div>
 
             <!--sản phẩm-->
