--- a/views/hethongsp.ejs
+++ b/views/hethongsp.ejs
@@ -15,6 +15,9 @@
         <a style="color: black; font-size: 24px; width: 120px; height:60px; line-height: 60px; text-align: center;">Admintrator</a>
     </div>
     <div class="container">
+      <a href="adminlogout"><div style="width:100px; height:40px; background-color:#4da6ff; float:right; border-radius:0px 0px 10px 10px;">
+        <p style="margin-top:10px; font-size:15px; margin-left:15px;">Đăng xuất</p>
+      </div></a>
         <div style="height:100px; width: 100%;"></div>
         <div style="width:250px; height: 500px; float:left;">
             <!--Tài khoản-->
@@ -38,21 +41,21 @@
                 </div>
             </a>
             <div id="hethong">
-                <a href="hethongsp">
-                    <div class="tab"><span style="margin-left:20px; color:red;">Hệ thống sản phẩm</span></div>
-                </a>
-                <a href="kiemtrasp">
-                    <div class="tab"><span style="margin-left:20px;">Kiểm tra sản phẩm</span></div>
-                </a>
-                <a href="thongkedonhang">
-                    <div class="tab"><span style="margin-left:20px;">Thống kê đơn hàng</span></div>
-                </a>
-                <a href="thongkedoanhso">
-                    <div class="tab"><span style="margin-left:20px;">Thống kê doanh số</span></div>
-                </a>
-                <a href="thongketop10">
-                    <div class="tab"><span style="margin-left:20px;">Thống kê top10</span></div>
-                </a>
+              <a href="hethongsp-1">
+                  <div class="tab"><span style="margin-left:20px;">Hệ thống sản phẩm</span></div>
+              </a>
+              <a href="kiemtrasp">
+                  <div class="tab"><span style="margin-left:20px;">Kiểm tra sản phẩm</span></div>
+              </a>
+              <a href="thongkedonhang">
+                  <div class="tab"><span style="margin-left:20px;">Thống kê đơn hàng</span></div>
+              </a>
+              <a href="thongkedoanhso">
+                  <div class="tab"><span style="margin-left:20px;">Thống kê doanh số</span></div>
+              </a>
+              <a href="thongketop10">
+                  <div class="tab"><span style="margin-left:20px;">Thống kê top10</span></div>
+              </a>
             </div>
 
             <!--sản phẩm-->
@@ -113,7 +116,7 @@
         <div style="margin-left:300px">
           <ul class="pager pagination pagination-lg">
               <% var i = 1; while(maxpage>0){ %>
-                <li><a href="#"><%= i %></a></li>
+                <li><a href="hethongsp-<%= i %>"><%= i %></a></li>
               <% i = i + 1; maxpage = maxpage - 1;} %>
 
           </ul>
